# emacs-config

./: README.md  init.el
config/: init.el  interface.el  keyboard-shortcuts.el  mouse.el  programming.el
elpa/all-the-icons-20210208.0/: all-the-icons.elc
elpa/autopair-20160304.1237/: autopair-pkg.el
elpa/display-theme-20140115.1556/: display-theme-autoloads.el  display-theme-pkg.el  display-theme.elc
elpa/gnupg/: pubring.kbx  trustdb.gpg
elpa/haskell-emacs-20160904.2026/: haskell-emacs-pkg.el  haskell-emacs.elc
elpa/persp-mode-20201128.2015/: persp-mode-autoloads.el  persp-mode-pkg.el  persp-mode.elc
elpa/perspective-20210104.2243/: perspective-pkg.el  perspective.elc
elpa/python-mode-20201230.2132/: python-mode-autoloads.el  python-mode.elc
elpa/terminal-here-20201230.1219/: terminal-here-autoloads.el  terminal-here-pkg.el  terminal-here.el  terminal-here.elc
elpa/treemacs-20200516.1204/: treemacs-async.elc  treemacs-compatibility.elc  treemacs-customization.elc  treemacs-header-line.elc  treemacs-icons.elc  treemacs-mode.elc  treemacs-mouse-interface.elc  treemacs.elc
elpa/treemacs-all-the-icons-20210118.1808/: treemacs-all-the-icons-pkg.el  treemacs-all-the-icons.el  treemacs-all-the-icons.elc
elpa/treemacs-icons-dired-20210107.1251/: treemacs-icons-dired-pkg.el  treemacs-icons-dired.el  treemacs-icons-dired.elc
elpa/treemacs-persp-20210114.2135/: treemacs-persp-pkg.el  treemacs-persp.el  treemacs-persp.elc
haskell-fun/: HaskellEmacs.cabal  HaskellEmacs.hs  Matrix.hs  cabal.sandbox.config
haskell-fun/.cabal-sandbox/: add-source-timestamps
(+8 files in other folders)
